Edits videopose bib
Signed-off-by: Apoorva Beedu Gatech <abeedu3@gatech.edu>

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,16 +1,12 @@
 ---
 ---
 
-
-
-@misc{beedu2021videopose,
-      title={VideoPose: Estimating 6D object pose from videos}, 
-      author={Apoorva Beedu and Zhile Ren and Varun Agrawal and Irfan Essa},
-      year={2021},
-      eprint={2111.10677},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      selected={true},
+@article{beedu2021videopose,
+  title={VideoPose: Estimating 6D object pose from videos},
+  author={Beedu, Apoorva and Ren, Zhile and Agrawal, Varun and Essa, Irfan},
+  journal={arXiv preprint arXiv:2111.10677},
+  year={2021},
+  selected={true},
       pdf={VideoPose.pdf},
       abstract={We introduce a simple yet effective algorithm that uses convolutional neural networks to directly estimate object poses from videos. Our approach leverages the temporal information from a video sequence, and is computationally efficient and robust to support robotic and AR domains. Our proposed network takes a pre-trained 2D object detector as input, and aggregates visual features through a recurrent neural network to make predictions at each frame. Experimental evaluation on the YCB-Video dataset show that our approach is on par with the state-of-the-art algorithms. Further, with a speed of 30 fps, it is also more efficient than the state-of-the-art, and therefore applicable to a variety of applications that require real-time object pose estimation.}
 }
