--- a/_posts/2024-1-10-MAT.markdown
+++ b/_posts/2024-1-10-MAT.markdown
@@ -5,8 +5,9 @@ date:   2024-01-10 22:21:59 +00:00
 image: /images/MAT.jpg
 categories: research
 author: "Apoorva Beedu"
-authors: "<strong>Apoorva Beedu</strong>, Karan Samel, Irfan Essa"
+authors: "<strong>Apoorva Beedu</strong>, Harish Haresamudram, Irfan Essa"
 venue: "ArXiv preprint (Under review)"
 arxiv: https://arxiv.org/pdf/2401.12972.pdf
+bibtex: https://scholar.googleusercontent.com/scholar.bib?q=info:TBwYIFMm2ZgJ:scholar.google.com/&output=citation&scisdr=ClHSV9rtEI3y5l-gUK4:AFWwaeYAAAAAZuumSK5_TkaW61ZLF8pwp66hKqc&scisig=AFWwaeYAAAAAZuumSEg9dlaoUMV5-CgM097dWag&scisf=4&ct=citation&cd=-1&hl=en
 ---
 Introduces contrastive learning for Action Anticipation and evaluates using text data as additional modalities.
